--- a/ms3.html
+++ b/ms3.html
@@ -372,6 +372,9 @@ summary {
 <p>ABOUT MY PROJECT</p>
 <p>I have updated my project to be a coronavirus tracker. In my project, I am using data sets from WHO and CDC to create visualisations and analyse the spread of coronavirus in the world. The first dataset fromWHo gives a daily track of coronavirus cases. The seocnd dataset from CDC gives a sprea do fthe coronavirus cases in the US.</p>
 <p>Through this, I will be able to compare the daily sprad of coronavirus globally and contrast it with the spread in America.</p>
+<p>UPDATE FOR MILESTONE 4:</p>
+<p>Although I had already done a fair amount of data cleaning for the last milestone, I have updated the data I am using to add day-level data, that is, data from each day since the outbreak started. This is for the purpose of being able to “map” the outbreak from Day 0 to present day.</p>
+<p>I also intend to find more datasets of daily data for the SARS and MERS outbreaks and use them to contrast the day-by-day spread of these diseases compared with coronavirus. Data has been pulled from the WHO, the CDC, and the European version of the CDC.</p>
 
 
 
